objects/Week_Number__c/Week_Number__c.object-meta.xml
<CustomObject>
    <label>Week Number</label>
    <nameField>
        <label>Week Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Week Numbers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>