objects/Week_Number__c/fields/Week_No__c.field-meta.xml
<CustomField>
    <fullName>Week_No__c</fullName>
    <label>Week No.</label>
    <length>2</length>
    <type>Text</type>
</CustomField>