objects/Week_Number__c/fields/Week_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Date__c</fullName>
    <label>Week Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>