objects/Week_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Week_Start_Date__c</columns>
    <columns>Week_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>