objects/Week_Number__c/listViews/X2019_Week_Numbers.listView-meta.xml
<ListView>
    <fullName>X2019_Week_Numbers</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Week_Start_Date__c</columns>
    <columns>Week_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <label>2019 Week Numbers</label>
</ListView>