objects/Week_Number__c/listViews/X2020.listView-meta.xml
<ListView>
    <fullName>X2020</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Week_Start_Date__c</columns>
    <columns>Week_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <label>2020 Week Numbers</label>
</ListView>