objects/Week_Number__c/listViews/X20201_Week_Numbers.listView-meta.xml
<ListView>
    <fullName>X20201_Week_Numbers</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Week_Start_Date__c</columns>
    <columns>Week_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>2021 Week Numbers</label>
</ListView>